--- a/.github/workflows/node-gh-pages.yml
+++ b/.github/workflows/node-gh-pages.yml
@@ -1,4 +1,3 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
@@ -35,6 +34,8 @@ jobs:
         with:
           node-version: '20.x'
       - name: Install Dependencies
+        run: npm install
+      - name: Run build
         run: npm run build
 
   # Deployment job
