--- a/.github/workflows/node-gh-pages.yml
+++ b/.github/workflows/node-gh-pages.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
