--- a/.github/workflows/node-gh-pages.yml
+++ b/.github/workflows/node-gh-pages.yml
@@ -31,4 +31,4 @@ jobs:
       run: npm run build
 
     - name: Upload artifact
-    - uses: actions/upload-pages-artifact@v3
+      uses: actions/upload-pages-artifact@v3
